<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organizer.CreateEventFragment">

    <TextView
        android:id="@+id/CreateEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Eventname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateEventTitleText" />

    <EditText
        android:id="@+id/EditEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_frame"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateEventName" />

    <TextView
        android:id="@+id/CreateEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_EventDate"
        app:layout_constraintStart_toStartOf="@+id/EditEventName"
        app:layout_constraintTop_toBottomOf="@+id/EditEventName" />

    <EditText
        android:id="@+id/EditEventDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_frame"
        android:inputType="date"
        android:drawableEnd="@drawable/ic_date_calendar"
        app:layout_constraintTop_toBottomOf="@+id/CreateEventDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false"
        />


    <TextView
        android:id="@+id/CreateEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEventDate" />

    <EditText
        android:id="@+id/EditEventDescription"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateEventDescription" />

    <Button
        android:id="@+id/buttonArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="644dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableStart="@drawable/baseline_arrow_back_24"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/Previous"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="36dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CreateEventTitle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/create_event_text"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CreateEventTitleText"
        android:layout_width="375dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/create_event_title_text"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateEventTitle" />

    <ImageView
        android:id="@+id/EventImageView"
        android:layout_width="390dp"
        android:layout_height="101dp"
        android:layout_marginTop="76dp"
        android:onClick="pickImage"
        android:src="@drawable/ic_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEventDescription" />

    <EditText
        android:id="@+id/LimitAttendeesView"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/sign_up_limit"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:maxLength="5"
        app:layout_constraintBottom_toTopOf="@+id/EventImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEventDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>