...
    <string name="hint_email">superman123@gmail.com</string>
    <string name="hint_homepage_description">I am from Edmonton</string>
    <string name="hint_phone">+1 789 233 233</string>
    <string name="Eventname">Event Name</string>
    <string name="create_EventDate">Event Date</string>
    <string name="AddImage">ADD IMAGE</string>
    <string name="Confirm">CONFIRM</string>
    <string name="Previous">Previous</string>
    <string name="create_event_text">Create Event</string>
    <string name="create_event_title_text">"Write the Event Name to Create an event upon submission a unique QR Code "</string>
    <string name="create_event_description">Event Description</string>
    <string name="edit_event">Edit Event</string>
    <string name="sign_up_for_event">Sign Up For Event</string>
...
    <string name="notif_placeholder">Notif Placeholder</string>
    <string name="event_description">Event Description</string>
    <string name="checked_in_1_times">Checked in 1 times</string>
    <string name="last_check_in_march_25_2024">Last check-in: March 25, 2024</string>
    <string name="view">View</string>
    <string name="google_maps_key">GOOGLE_MAPS_KEY</string>
    <string name="restrictiontext">Maximum 1000 characters including spaces</string>
    <string name="history">History</string>
    <string name="title_activity_notification_set_up">NotificationActivitySetUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
...
    </string>
    <string name="QR_code_eventinfo">Event Information QR Code</string>
    <string name="Number_of_limite_attendees">number_of_limite_attendees</string>
    <string name="Number_of_limit_attendees">Number_of_limit_attendees</string>
    <string name="sign_up_limit">Sign Up Limit(Optional)</string>
    <string-array name="event_action_options">
        <item>Check-ins</item>
        <item>Sign-ups</item>
    </string-array>
    <string-array name="image_action_options">
        <item>Event Images</item>
        <item>Profile Images</item>
        <item>QR Codes</item>
    </string-array>
...
