<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_information"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="8dp" />


    <Button
        android:id="@+id/button_notifyAttendees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_attendees"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/spinner_eventActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_custom_background"
        android:padding="8dp"
        android:popupBackground="#FFFFFF"
        android:entries="@array/event_action_options"
        android:layout_marginBottom="16dp"
        android:dropDownVerticalOffset="10dp" />

    <ListView
        android:id="@+id/listview_attendees"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />


</LinearLayout>